Bug 73280 - hang while GC'ing fonts ...
Summary: hang while GC'ing fonts ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0 target:4.2.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-04 14:46 UTC by Michael Meeks
Modified: 2014-01-04 15:41 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2014-01-04 14:46:29 UTC
Seems we introduced an infinite loop while cleaning up fonts, which is unfortunate:

commit 1b1f49f5d6f9d45992b427d9b2a897e329c7b297
Author: Julien Nabet <serval2412@yahoo.fr>
Date:   Sun Aug 25 20:24:24 2013 +0200

    Simplify iterator management (part2)

never advances the iterator for the branch outside the (if) ...

:-) pushing a fix.
Comment 1 Commit Notification 2014-01-04 14:50:06 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2c066ac3df6dd0a3457810a6650c5b2bc246f03f

fdo#73280 - always advance the iterator to avoid an infinite loop.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Michael Meeks 2014-01-04 14:51:09 UTC
fixed :-)
Comment 3 Commit Notification 2014-01-04 14:51:23 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=227fb8c9c3b22798b90aff9b17605428b7f9a897&h=libreoffice-4-2

fdo#73280 - always advance the iterator to avoid an infinite loop.


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2014-01-04 15:41:37 UTC
Indeed, sorry for this :-(
Thank you Michael for the fix!