fdo#73280 - always advance the iterator to avoid an infinite loop.

Change-Id: I62f2d8ec5d6d62f1dbe9657cfbbbc90c56cce812